--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
 * {
     border: 0px;
     padding: 0px;
     margin: 0px;
-    font-family: 'Dongle', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 li {
     list-style-type: none;
 }
 
+/*header*/
 .header {
     display: flex;
     justify-content: space-between;
@@ -44,6 +45,13 @@ li {
 .hero-main {
     background-color: #1f2937;
     display: flex;
+    padding: 64px 0;
+    justify-content: space-between;
+    gap: 16px;
+}
+
+.hero-main-text {
+    flex: 0 1 100%;
 }
 
 .hero-main-text-title {
@@ -62,9 +70,117 @@ li {
     color: #e5e7eb;
     padding: 2px 16px;
     border-radius: 4px;
-    
+    margin-top: 8px;
 }
 
 .hero-main-text-button:hover {
     background-color: #6ca1f7;
+}
+
+.hero-main-image {
+    background-color: grey;
+    color: white;
+    text-align: center;
+    flex: 1 1 100%;
+    width: 300px;
+    height: 188px;
+}
+
+/* information section */
+
+.info {
+    padding: 96px 128px;
+}
+
+.info-header {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 1000;
+    color: #1f2937;
+    margin-bottom: 96px;
+}
+
+.info-list {
+    display: flex;
+    justify-content: space-around;
+}
+
+.info-list > li {
+    width: 128px;
+}
+
+.info-list-image {
+    border: 4px solid #3882f6;
+    border-radius: 8px;
+    width: 140px;
+    height: 140px;
+    margin-bottom: 16px;
+}
+
+/* quote */
+
+.quote {
+    background-color: #e5e7eb;
+    padding: 96px 128px;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937;
+    font-weight: lighter;
+}
+
+.quote-name {
+    font-size: 16px;
+    font-weight: 1000;
+    text-align: right;
+}
+
+/* action */
+
+.action {
+    display: flex;
+    background-color: #3882f6;
+    justify-content: space-around;
+    align-items: center;
+    margin: 64px 96px;
+    padding: 32px 32px;
+    border: 0px;
+    border-radius: 8px;
+}
+
+.action-text {
+    background-color: #3882f6;
+    color: #f9faf8;
+}
+
+.action-header {
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-weight: bolder;
+    padding-right: 16px;
+}
+
+.action-button {
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-weight: bolder;
+    border: 2px solid #f9faf8;
+    border-radius: 8px;
+    padding: 2px 16px;
+}
+
+.action-button:hover {
+    background-color: #6ca1f7;
+}
+
+/* footer */
+
+.footer {
+    background-color: #1f2937;
+    color: #f9faf8;
+    font-size: 12px;
+    text-align: center;
+    padding: 32px;
 }
