--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ li {
     display: flex;
     justify-content: space-between;
     background-color: #1f2937;
+    padding: 8px 0;
 }
 
 .header-logo {
